# noxer-team

./: .env.example  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
migrations/versions/: cd6d05dccca4_initial.py
src/: __init__.py  __main__.py
src/app/: config.py  extensions.py
src/app/api/: routes.py
src/app/models/: category.py  product.py
src/app/schemas/: product.py
src/app/services/: fetch.py  sync.py
src/app/tasks/: __init__.py
